refactor: clean up the scss directory

--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -1,37 +1,32 @@
-@import './login.scss';
-@import './dropDown.scss';
-@import './footer.scss';
-@import './header.scss';
-@import './card.scss';
-@import './graphDashboard.scss';
-@import './pagination.scss';
-@import './dropDown.scss';
-@import './table.scss';
-@import './register.scss';
-@import './dashboard.scss';
-@import './messageAlert.scss';
-@import './projectDataList.scss';
-@import './projectDataRegistration.scss';
-@import './sidebar.scss';
-@import './employeeExpensesList.scss';
-@import './employeeExpensesRegistration.scss';
-@import './notFound.scss';
-@import './planning.scss';
-@import './tablePlanning.scss';
-@import './costOfSalesRegistration.scss';
-@import './costOfSalesList.scss';
-@import './expensesRegistration.scss';
+@import './Login/Login.scss';
+@import './NotFound/NotFound.scss';
+@import './Components/AlertModal.scss';
+@import './Components/Button.scss';
+@import './Components/Card.scss';
+@import './Components/DropDown.scss';
+@import './Components/Footer.scss';
+@import './Components/GraphDashboard.scss';
+@import './Components/Header.scss';
+@import './Components/MessageAlert.scss';
+@import './Components/Pagination.scss';
+@import './Components/Sidebar.scss';
+@import './Components/Table.scss';
+@import './Components/TablePlanning.scss';
+@import './Dashboard/Dashboard.scss';
+@import './Planning/PlanningListAndEdit.scss';
+@import './Projects/ProjectsRegistration.scss';
+@import './Projects/ProjectsListAndEdit.scss';
+@import './EmployeeExpenses/EmployeeExpensesRegistration.scss';
+@import './EmployeeExpenses/EmployeeExpensesList.scss';
+@import './Expenses/ExpensesRegistration.scss';
+@import './Expenses/ExpensesList.scss';
+@import './CostOfSales/CostOfSalesRegistration.scss';
+@import './CostOfSales/CostOfSalesList.scss';
 @import './Clients/ClientsRegistration.scss';
 @import './Clients/ClientsListAndEdit.scss';
-@import './AlertModal.scss';
-@import './expensesList.scss';
-@import './BusinessDivisions/BusinessDivisionsRegistration.scss';
-@import './BusinessDivisions/BusinessDivisionsListAndEdit.scss';
 @import './Employees/EmployeesRegistration.scss';
 @import './Employees/EmployeesListAndEdit.scss';
+@import './BusinessDivisions/BusinessDivisionsRegistration.scss';
+@import './BusinessDivisions/BusinessDivisionsListAndEdit.scss';
 @import './Users/UsersRegistration.scss';
 @import './Users/UsersListAndEdit.scss';
-
-
-
-
