refactor: modify the behavior of the sidebar

--- a/client/src/assets/scss/Dashboard/Dashboard.scss
+++ b/client/src/assets/scss/Dashboard/Dashboard.scss
@@ -107,22 +107,33 @@
     .dashboard_content_wrapper{
         display: flex;
         background-color: #EFEDEA;
+        width: 100vw; 
+        height: 130vh;
         @media only screen and (max-width: 1000px){
             flex-direction: column;
         }
-        .dashboard_sidebar{
-            flex: 0 0 205px;
-            background-color: #1c302c;
-            @media only screen and (max-width: 1000px){
-                flex: 0 0 auto;
-                width: 100%;
-                display: none;
-            }
-        }
         .dashboard_content{
-            flex: 1;
-            display: flex;
-            flex-direction: column;
+            width: 84%;
+            padding: 10px;
+            overflow-y: auto;
+            scroll-behavior: smooth;
+            scrollbar-width: thin;
+            scrollbar-color: #4caf50 #e0e0e0;
+            ::-webkit-scrollbar {
+                width: 8px;
+              }
+              ::-webkit-scrollbar-track {
+                background: #e0e0e0; 
+                border-radius: 10px; 
+              }
+              ::-webkit-scrollbar-thumb {
+                background-color: #4caf50; 
+                border-radius: 10px; 
+                border: 2px solid #e0e0e0; 
+              }
+              ::-webkit-scrollbar-thumb:hover {
+                background-color: #66bb6a;
+              }
             .dashboard_body_cont{
                 display: flex;
                 margin-top: 10px;
@@ -200,7 +211,7 @@
             .dashboard_bottom_cont{
                 margin-top: 20px;
                 width: 100%;
-                padding: 5px;
+                // padding: 5px;
                 .dashboard_right-content{
                     padding: 10px 10px 10px 10px;
                     .dashboard_paginate{
@@ -263,13 +274,14 @@
                     }
                 }
                 .dashboard_tbl_cont{
-                    background-color: #fff;
+                    // background-color: #fff;
+                    margin-bottom: 10px;
                     .dashboard_table_content_planning{
                         .table-planning-container{
                           width: 100% !important;
                           .table-planning{
                             table{
-                              
+                                background-color: #fff;
                             }
                           }
                         }
@@ -280,8 +292,9 @@
                       .dashboard_table_content_props{
                         height: 82vh;
                         .planning_scrollable{
-                          max-height: 80vh;
+                          max-height: 79vh;
                           margin-top: 15px;
+                          background-color: #fff;
                         }
                       }
                 }
