--- a/client/src/assets/scss/Components/Table.scss
+++ b/client/src/assets/scss/Components/Table.scss
@@ -67,8 +67,8 @@ td.td_first {
 }
 
 .scrollable_container {
-    max-height: 500px; /* Set the maximum height of the container */
-    overflow-y: auto; /* Enable vertical scrolling */
+    max-height: 500px; 
+    overflow-y: auto;
     scrollbar-width: thin;
     scrollbar-width: none;
 }
