--- a/client/src/assets/scss/Components/TablePlanning.scss
+++ b/client/src/assets/scss/Components/TablePlanning.scss
@@ -13,7 +13,9 @@
         width: 100%;
         border-collapse: collapse;
         border: 1px solid black;
-  
+        @media only screen and (min-width: 1920px){
+          height: 119vh;
+        }
         th, td {
           border: 1px solid #ddd;
           padding: 2px;
