--- a/client/src/assets/scss/EmployeeExpenses/EmployeeExpensesList.scss
+++ b/client/src/assets/scss/EmployeeExpenses/EmployeeExpensesList.scss
@@ -96,20 +96,13 @@
     .employeeExpensesList_cont_wrapper{
         display: flex;
         background-color: #EFEDEA;
+        width: 100vw; 
+        height: 130vh;
         @media only screen and (max-width: 1000px){
             flex-direction: column;
         }
-        .employeeExpensesList_sidebar{
-            flex: 0 0 205px;
-            background-color: #1c302c;
-            @media only screen and (max-width: 1000px){
-                flex: 0 0 auto;
-                width: 100%;
-                display: none;
-            }
-        }
         .employeeExpensesList_wrapper_div{
-                    width: 100%;
+                    width: 84%;
                     height: 100vh;
                     padding: 10px 30px 10px 30px;
                     .employeeExpensesList_top_content{
@@ -143,7 +136,7 @@
                             }
                         }
                         .employeeExpensesList_mid_body_cont{
-                            height: 87vh;
+                            height: 118vh;
                             .employeeExpensesList_mid_btn_cont{
                                 margin-left: 5%;
                                 display: flex;
@@ -187,12 +180,12 @@
                             }
                             .employeeExpensesList_table_wrapper{
                                 width: 100%;
-                                height: 60vh;
+                                height: 80vh;
                                 overflow-y: auto; 
                                 overflow-x: hidden;
                                 scrollbar-width: none;
-                                @media only screen and (min-width: 1875px){
-                                    height: 55vh;
+                                @media only screen and (min-width: 1920px){
+                                    height: 85vh;
                                 }
                             
                                 &::-webkit-scrollbar {
