--- a/client/src/assets/scss/Employees/EmployeesListAndEdit.scss
+++ b/client/src/assets/scss/Employees/EmployeesListAndEdit.scss
@@ -96,21 +96,13 @@
     .EmployeesListAndEdit_cont_wrapper{
         display: flex;
         background-color: #EFEDEA;
+        width: 100vw;
+        height: 130vh;
         @media only screen and (max-width: 1000px){
             flex-direction: column;
         }
-        .EmployeesListAndEdit_sidebar{
-            flex: 0 0 205px;
-            background-color: #1c302c;
-            @media only screen and (max-width: 1000px){
-                flex: 0 0 auto;
-                width: 100%;
-                display: none;
-            }
-        }
         .EmployeesListAndEdit_maincontent_wrapper{
-            width: 100%;
-            height: 100vh;
+            width: 84%;
             padding: 10px 30px 10px 30px;
             .EmployeesListAndEdit_top_content{
                 border: 1px solid #fff;
@@ -139,10 +131,7 @@
                     color: white;
                 }
                 .EmployeesListAndEdit_mid_body_cont{
-                    height: 115vh;
-                    @media only screen and (min-width: 1920px){
-                        height: 90vh;
-                    }
+                    height: 118vh;
                     .EmployeesListAndEdit_mid_btn_cont{
                         margin-left: 5%;
                         display: flex;
@@ -187,12 +176,12 @@
                 }
                 .EmployeesListAndEdit_table_wrapper{
                     width: 100%;
-                    height: 75vh;
+                    height: 80;
                     overflow-y: auto; 
                     overflow-x: hidden;
                     scrollbar-width: none;
                     @media only screen and (min-width: 1920px){
-                        height: 60vh;
+                        height: 85vh;
                     }
                     &::-webkit-scrollbar {
                         width: 0;
@@ -216,6 +205,10 @@
                         padding: 0px 0px 0px 70px;
                         table{
                             width: 97%;
+                            height: 80vh;
+                            @media only screen and (min-width: 1920px){
+                                height: 85vh;
+                            }
                             .EmployeesListAndEdit_table_title{
                                 text-align: center;
                                 background-color: #808080;
