--- a/client/src/assets/scss/Planning/PlanningListAndEdit.scss
+++ b/client/src/assets/scss/Planning/PlanningListAndEdit.scss
@@ -89,24 +89,15 @@
     @media only screen and (max-width: 1000px){
         flex-direction: column;
     }
-    .planning_sidebar{
-      flex: 0 0 205px;
-      background-color: #1c302c;
-      @media only screen and (max-width: 1000px){
-          flex: 0 0 auto;
-          width: 100%;
-          display: none;
-      }
-    }
     .planning_table_wrapper{
-      width: 100%;
+      width: 84%;
       height: 100vh;
-      padding: 10px 30px 10px 30px;
+      padding: 10px 20px 10px 20px;
       .planning_top_cont{
         border: 1px solid #fff;
         border-radius: 5px;
         background-color: #fff;
-        height: 97vh;
+        // height: 97vh;
         .planning_content{
           .planning_btm{
             .planning_header_text{
@@ -188,16 +179,25 @@
               .table_content_planning{
                 .table-planning-container{
                   width: 100% !important;
-                  height: 90vh;
+                  height: 120vh;
+                  @media only screen and (min-width: 1920px){
+                    height: 122vh;
+                  }
+                  table{
+
+                  }
                 }
               }
               .hidden{
                 display: none;
               }
               .table_content_props{
-                height: 82vh;
+                height: 118vh;
+                @media only screen and (min-width: 1920px){
+                  height: 120vh;
+                }
                 .planning_scrollable{
-                  max-height: 87vh;
+                  max-height: 115vh;
                 }
               }
               .div_submit {
