--- a/client/src/assets/scss/Projects/ProjectsListAndEdit.scss
+++ b/client/src/assets/scss/Projects/ProjectsListAndEdit.scss
@@ -97,20 +97,13 @@
     .projectsList_cont_wrapper{
         display: flex;
         background-color: #EFEDEA;
+        width: 100vw; 
+        height: 130vh;
         @media only screen and (max-width: 1000px){
             flex-direction: column;
         }
-        .projectsList_sidebar{
-            flex: 0 0 205px;
-            background-color: #1c302c;
-            @media only screen and (max-width: 1000px){
-                flex: 0 0 auto;
-                width: 100%;
-                display: none;
-            }
-        }
         .projectsList_wrapper{
-                    width: 100%;
+                    width: 84%;
                     height: 100vh;
                     padding: 10px 30px 10px 30px;
                     .projectsList_top_content{
@@ -141,7 +134,7 @@
                             color: white;
                         }
                         .projectsList_mid_body_cont{
-                            height: 87vh;
+                            height: 118vh;
                             .projectsList_mid_btn_cont{
                                 margin-left: 5%;
                                 display: flex;
@@ -185,12 +178,12 @@
                             }
                             .projectsList_table_wrapper{
                                 width: 100%;
-                                height: 50vh;
+                                height: 80vh;
                                 overflow-y: auto; 
                                 overflow-x: hidden;
                                 scrollbar-width: none;
-                                @media only screen and (min-width: 1875px){
-                                    height: 55vh;
+                                @media only screen and (min-width: 1920px){
+                                    height: 85vh;
                                 }
                             
                                 &::-webkit-scrollbar {
