refactor: fixed the layout for all registrations page

--- a/client/src/assets/scss/EmployeeExpenses/EmployeeExpensesRegistration.scss
+++ b/client/src/assets/scss/EmployeeExpenses/EmployeeExpensesRegistration.scss
@@ -96,11 +96,13 @@
   .employeeExpensesRegistration_cont_wrapper{
     display: flex;
     background-color: #EFEDEA;
+    width: 100vw;
+    height: 130vh;
     @media only screen and (max-width: 1000px){
         flex-direction: column;
     }
     .employeeExpensesRegistration_wrapper_div{
-      width: 100%;
+      width: 84%;
       height: 100vh;
       padding: 10px 30px 10px 30px;
       .employeeExpensesRegistration_top_content{
@@ -115,7 +117,7 @@
           }
         }
         .employeeExpensesRegistration_mid_body_cont{
-          height: 87vh;
+          height: 118vh;
           .employeeExpensesRegistration_mid_btn_cont{
             margin-left: 5%;
             display: flex;
