--- a/client/src/assets/scss/Expenses/ExpensesRegistration.scss
+++ b/client/src/assets/scss/Expenses/ExpensesRegistration.scss
@@ -93,12 +93,14 @@
     .expensesRegistration_content_wrapper{
         display: flex;
         background-color: #EFEDEA;
+        width: 100vw;
+        height: 130vh;
         @media only screen and (max-width: 1000px){
             flex-direction: column;
         }
         .expensesRegistration_data_content{
-            width: 100%;
-            height: 94vh;
+            width: 84%;
+            // height: 94vh;
             margin: 10px 30px 10px 30px;
             border: 1px solid #fff;
             border-radius: 5px;
