--- a/client/src/assets/scss/Projects/ProjectsRegistration.scss
+++ b/client/src/assets/scss/Projects/ProjectsRegistration.scss
@@ -95,11 +95,13 @@
     .projectsRegistration_content_wrapper{
         display: flex;
         background-color: #EFEDEA;
+        width: 100vw;
+        height: 130vh;
         @media only screen and (max-width: 1000px){
             flex-direction: column;
         }
         .projectsRegistration_data_content{
-            width: 100%;
+            width: 84%;
             margin: 10px 30px 10px 30px;
             border: 1px solid #fff;
             border-radius: 5px;
