refactor: changed the order in sidebar and fixed some issues in layout

--- a/client/src/assets/scss/Components/Sidebar.scss
+++ b/client/src/assets/scss/Components/Sidebar.scss
@@ -28,6 +28,7 @@
       scrollbar-width: thin; 
       scrollbar-color: #4caf50 #2e4c48; 
       ul {
+        margin-left: 20px;
         list-style-type: none;
         padding: 0;
         li {
