--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -7,8 +7,11 @@
 @import './Components/Footer.scss';
 @import './Components/GraphDashboard.scss';
 @import './Components/Header.scss';
+@import './Components/HeaderButtons.scss';
+@import './Components/ListButtons.scss';
 @import './Components/MessageAlert.scss';
 @import './Components/Pagination.scss';
+@import './Components/RegistrationButtons.scss';
 @import './Components/Sidebar.scss';
 @import './Components/Table.scss';
 @import './Components/TablePlanning.scss';
