refactor: override the padding values in RegistrationButtons directly to register pages

--- a/client/src/assets/scss/CostOfSales/CostOfSalesRegistration.scss
+++ b/client/src/assets/scss/CostOfSales/CostOfSalesRegistration.scss
@@ -1,6 +1,9 @@
 .costOfSalesRegistration_wrapper{
     display: flex;
     flex-direction: column;
+    .RegistrationButtons_title_container{
+        padding: 54.5px 70px 50px 70px !important;
+    }
     .costOfSalesRegistration_content_wrapper{
         display: flex;
         background-color: #EFEDEA;
