--- a/client/src/assets/scss/Components/ListButtons.scss
+++ b/client/src/assets/scss/Components/ListButtons.scss
@@ -23,7 +23,7 @@
   .ListButtons_title_container{
     display: flex;
     width: 100%;
-    padding: 40px 70px;
+    padding: 49px 70px 50px 70px;
     gap: 7.8%;
     align-items: center;
     .ListButtons_title_table_cont{
