--- a/client/src/assets/scss/Users/UsersRegistration.scss
+++ b/client/src/assets/scss/Users/UsersRegistration.scss
@@ -1,6 +1,9 @@
 .UsersRegistration_wrapper{
     display: flex;
     flex-direction: column;
+    .RegistrationButtons_title_container{
+        padding: 58.5px 70px 50px 70px !important;
+    }
     .UsersRegistration_content_wrapper{
         display: flex;
         background-color: #EFEDEA;
