--- a/client/src/assets/scss/Components/Table.scss
+++ b/client/src/assets/scss/Components/Table.scss
@@ -69,28 +69,27 @@ td.td_first {
 .scrollable_container {
     max-height: 500px; 
     overflow-y: auto;
-    scrollbar-width: thin;
-    scrollbar-width: none;
+    overflow-x: hidden; 
+    scrollbar-width: none; 
+    transition: scrollbar-color 0.3s ease;
+    &::-webkit-scrollbar {
+        width: 0; 
+    }
+    &:hover {
+        scrollbar-width: thin; 
+        scrollbar-color: rgba(0, 0, 0, 0.3) transparent;
+        &::-webkit-scrollbar {
+            width: 8px; 
+        }
+        &::-webkit-scrollbar-thumb {
+            background-color: rgba(0, 0, 0, 0.5);
+            border-radius: 10px; 
+        }
+        &::-webkit-scrollbar-track {
+            background: transparent;
+        }
+    }
 }
-.scrollable_container::-webkit-scrollbar {
-    width: 0;
-    height: 0;
-}
-
-.scrollable_container::-webkit-scrollbar-track {
-    background: transparent;
-}
-
-.scrollable_container::-webkit-scrollbar-thumb {
-    background-color: transparent;
-    border-radius: 0;
-    border: none;
-}
-
-.scrollable_container::-webkit-scrollbar-thumb:hover {
-    background-color: transparent;
-}
-
 .td_no {
     width: 100px;
     text-align: 'center';
