--- a/client/src/assets/scss/Components/TablePlanning.scss
+++ b/client/src/assets/scss/Components/TablePlanning.scss
@@ -1,14 +1,37 @@
 .table-planning-container {
     padding: 10px;
     width: 180vh;
-    height: 85vh; // Adjust the height as needed
+    height: 85vh;
     overflow-y: auto; 
     overflow-x: hidden;
     scrollbar-width: none;
-  
+    transition: scrollbar-color 0.3s ease;
+    &::-webkit-scrollbar {
+        width: 8px;
+    }
+    &::-webkit-scrollbar-thumb {
+        background-color: rgba(0, 0, 0, 0.3);
+        border-radius: 10px;
+    }
+    &::-webkit-scrollbar-track {
+        background: transparent;
+    }
+    &:hover {
+        scrollbar-width: thin; 
+        scrollbar-color: rgba(0, 0, 0, 0.3) transparent; 
+        &::-webkit-scrollbar {
+            width: 8px;
+        }
+        &::-webkit-scrollbar-thumb {
+            background-color: rgba(0, 0, 0, 0.5);
+            border-radius: 10px;
+        }
+        &::-webkit-scrollbar-track {
+            background: transparent;
+        }
+    }
     .table-planning {
       width: 100%;
-      // overflow: auto; // Enable horizontal scrolling
       table {
         width: 100%;
         border-collapse: collapse;
@@ -37,7 +60,6 @@
           width: 67px;
         }
         th {
-          // background-color: #f2f2f2;
           white-space: nowrap;
         }
         
