--- a/client/src/assets/scss/CostOfSales/CostOfSalesList.scss
+++ b/client/src/assets/scss/CostOfSales/CostOfSalesList.scss
@@ -30,28 +30,29 @@
                         height: 80vh;
                         overflow-y: auto; 
                         overflow-x: hidden;
-                        scrollbar-width: none;
+                        scrollbar-width: thin;
+                        scrollbar-color: #888 #e0e0e0;
                         @media only screen and (min-width: 1920px){
                             height: 85vh;
                         }
-                    
                         &::-webkit-scrollbar {
-                            width: 0;
-                            height: 0;
+                            width: 8px;
                         }
-                    
                         &::-webkit-scrollbar-track {
-                            background: transparent;
+                            background: #e0e0e0;
                         }
-                    
                         &::-webkit-scrollbar-thumb {
-                            background-color: transparent;
-                            border-radius: 0;
-                            border: none;
+                            background-color: #888;
+                            border-radius: 10px;
                         }
-                    
                         &::-webkit-scrollbar-thumb:hover {
-                            background-color: transparent;
+                            background-color: #555;
+                        }
+                        &:not(:hover) {
+                            &::-webkit-scrollbar {
+                                width: 0;
+                            }
+                            scrollbar-width: none; 
                         }
                         .costOfSalesList_table_cont{
                             padding: 0px 0px 0px 70px;
