--- a/client/src/assets/scss/Dashboard/Dashboard.scss
+++ b/client/src/assets/scss/Dashboard/Dashboard.scss
@@ -11,25 +11,24 @@
         }
         .dashboard_content{
             width: 84%;
-            padding: 10px;
+            padding: 5px;
             overflow-y: auto;
             scroll-behavior: smooth;
             scrollbar-width: thin;
-            scrollbar-color: #4caf50 #e0e0e0;
             ::-webkit-scrollbar {
                 width: 8px;
               }
               ::-webkit-scrollbar-track {
-                background: #e0e0e0; 
+                // background: #e0e0e0; 
                 border-radius: 10px; 
               }
               ::-webkit-scrollbar-thumb {
-                background-color: #4caf50; 
+                // background-color: #4caf50; 
                 border-radius: 10px; 
-                border: 2px solid #e0e0e0; 
+                // border: 2px solid #e0e0e0; 
               }
               ::-webkit-scrollbar-thumb:hover {
-                background-color: #66bb6a;
+                // background-color: #66bb6a;
               }
             .dashboard_body_cont{
                 display: flex;
