--- a/client/src/assets/scss/Employees/EmployeesListAndEdit.scss
+++ b/client/src/assets/scss/Employees/EmployeesListAndEdit.scss
@@ -45,36 +45,37 @@
                 }
                 .EmployeesListAndEdit_table_wrapper{
                     width: 100%;
-                    height: 80;
+                    height: 80vh;
                     overflow-y: auto; 
                     overflow-x: hidden;
-                    scrollbar-width: none;
+                    scrollbar-width: thin;
+                    scrollbar-color: #888 #e0e0e0;
                     @media only screen and (min-width: 1920px){
                         height: 85vh;
                     }
                     &::-webkit-scrollbar {
-                        width: 0;
-                        height: 0;
+                        width: 8px;
                     }
-                
                     &::-webkit-scrollbar-track {
-                        background: transparent;
+                        background: #e0e0e0;
                     }
-                
                     &::-webkit-scrollbar-thumb {
-                        background-color: transparent;
-                        border-radius: 0;
-                        border: none;
+                        background-color: #888;
+                        border-radius: 10px;
                     }
-                
                     &::-webkit-scrollbar-thumb:hover {
-                        background-color: transparent;
+                        background-color: #555;
+                    }
+                    &:not(:hover) {
+                        &::-webkit-scrollbar {
+                            width: 0;
+                        }
+                        scrollbar-width: none; 
                     }
                     .EmployeesListAndEdit_table_cont{
                         padding: 0px 0px 0px 70px;
                         table{
                             width: 97%;
-                            height: 80vh;
                             .EmployeesListAndEdit_table_title{
                                 text-align: center;
                                 background-color: #808080;
