--- a/client/src/assets/scss/Employees/EmployeesRegistration.scss
+++ b/client/src/assets/scss/Employees/EmployeesRegistration.scss
@@ -27,11 +27,33 @@
             }
             .EmployeesRegistration_mid_body_cont{
                 background-color: #fff;
-                // max-height: 670px;
-                // overflow-y: auto;
-                // overflow-x: hidden;
-                // scrollbar-width: thin;
-                // scrollbar-color: #888 #f1f1f1;
+                max-height: 670px;
+                overflow-y: auto;
+                overflow-x: hidden;
+                scrollbar-width: thin; 
+                scrollbar-color: transparent transparent;
+                @media only screen and (min-width: 1875px){
+                    height: 55vh;
+                }
+                &:hover {
+                    scrollbar-color: #888 #EFEDEA; 
+                }
+                &::-webkit-scrollbar {
+                    width: 8px;
+                }
+                &::-webkit-scrollbar-track {
+                    background: transparent; 
+                }
+                &::-webkit-scrollbar-thumb {
+                    background-color: transparent; 
+                    border-radius: 10px;
+                }
+                &:hover::-webkit-scrollbar-thumb {
+                    background-color: #888;
+                }
+                &:hover::-webkit-scrollbar-thumb:hover {
+                    background-color: #555; 
+                }
                 .EmployeesRegistration_mid_form_cont{
                     margin: -20px 50px;
                     .EmployeesRegistration_form-content.EmployeesRegistration_ForImplementationOfPlusAndMinus{
