--- a/client/src/assets/scss/Planning/PlanningListAndEdit.scss
+++ b/client/src/assets/scss/Planning/PlanningListAndEdit.scss
@@ -9,12 +9,12 @@
     .planning_table_wrapper{
       width: 84%;
       height: 100vh;
-      padding: 10px 20px 10px 20px;
+      padding: 10px 2px 10px 2px;
       .planning_top_cont{
         border: 1px solid #fff;
         border-radius: 5px;
         background-color: #fff;
-        // height: 97vh;
+        height: 127.7vh;
         .planning_content{
           .planning_btm{
             .planning_header_text{
