--- a/client/src/assets/scss/Employees/EmployeesListAndEdit.scss
+++ b/client/src/assets/scss/Employees/EmployeesListAndEdit.scss
@@ -77,6 +77,9 @@
                         table{
                             width: 97%;
                             .EmployeesListAndEdit_table_title{
+                                position: sticky;
+                                top: 0;
+                                z-index: 1;
                                 text-align: center;
                                 background-color: #808080;
                                 .EmployeesListAndEdit_table_title_content_vertical{
