--- a/client/src/assets/scss/Projects/ProjectsListAndEdit.scss
+++ b/client/src/assets/scss/Projects/ProjectsListAndEdit.scss
@@ -78,6 +78,9 @@
                                     .table{
                                         width: 97%;
                                         .projectsList_table_title{
+                                            position: sticky;
+                                            top: 0;
+                                            z-index: 1;
                                             text-align: center;
                                             background-color: #808080;
                                             .projectsList_table_title_content_vertical{
